k8s/apps/cloud/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud
  labels:
    goldilocks.fairwinds.com/enabled: "true"
