k8s/apps/cloud/grafana.yaml
# private ingress for
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: cloud

spec:
  ingressClassName: traefik
  rules:
    - host: grafana.cocointhe.cloud
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - grafana.cocointhe.cloud
---
# public ingress only for solar data
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-tunnel
  namespace: cloud
spec:
  ingressClassName: traefik-tunnel
  rules:
    - host: grafana.cocointhe.cloud
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 3000
            path: /
            pathType: Prefix
---
# grafana -> prom and grafana->panel and plugins (wan)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-grafana
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
  - to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          app: loki
  - to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          app: garmin-grafana-influxdb
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
    ports:
    - protocol: TCP
      port: 443
