k8s/apps/cloud/landingpage.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-landingpage-llamacpp
spec:
  podSelector:
    matchLabels:
      app: landingpage
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.1.129/32
