k8s/apps/cloud/rackpost.yaml
# rackpost -> webpushservices like mozilla, apple & google
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-rackpost-push-services
spec:
  podSelector:
    matchLabels:
      app: rackpost
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
      ports:
        - protocol: TCP
          port: 443
