k8s/apps/cloud/ytzero.yaml
# ytzero -> youtube
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ytzero-youtube
spec:
  podSelector:
    matchLabels:
      app: ytzero
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
      ports:
        - protocol: TCP
          port: 443
